# libmv-blender

src/: CMakeLists.txt
src/CMake/: CreateLaunchers.cmake  findCoin3D.cmake  findOpenMesh.cmake  findarmadillo.cmake  findbundler.cmake  findcgal.cmake  findclapack321.cmake  findcudpp.cmake  findcvsba100.cmake  findlib3ds.cmake  findlibicp.cmake  findnlopt.cmake  findopencl.cmake  findvxl.cmake
src/libmv/image/: CMakeLists.txt
src/ui/tracker/: CMakeLists.txt  calibration.cc  clip.cc  gl.cc  tracker.cc  zoom.cc
